--- a/index.html
+++ b/index.html
@@ -182,6 +182,6 @@
         // Chama a função para montar o glossário quando a página carregar
         document.addEventListener('DOMContentLoaded', gerarGlossarioHTML);
     </script>
-<footer>por: Lucas Paganardi // Curso de Desenvolvimento de sistemas</footer>
+<h3>Eitado por: Lucas Paganardi // Curso de Desenvolvimento de sistemas</h3>
 </body>
 </html>
