--- a/index.html
+++ b/index.html
@@ -173,5 +173,5 @@
     // Chama a função para montar o glossário quando a página carregar
     document.addEventListener('DOMContentLoaded', gerarGlossarioHTML);
 </script>
-<script src="background.js"></script>
+<script src="script.js"></script>
 </body> </html>
